[gd_scene load_steps=15 format=3 uid="uid://cofufxnhhngdq"]

[ext_resource type="Texture2D" uid="uid://begwloepqmgrk" path="res://assets/characters/zhin/Fire_Warrior/Fire_Warrior_Portrait.png" id="1_tpsvn"]
[ext_resource type="Script" path="res://scripts/gui/character_select.gd" id="1_xvs0u"]
[ext_resource type="Texture2D" uid="uid://0vq1c4ncdk1q" path="res://assets/characters/hon/normal/reference.png" id="3_ow0ew"]
[ext_resource type="Texture2D" uid="uid://dfbv0onw0yn5i" path="res://assets/characters/p1_select.png" id="4_h86y1"]
[ext_resource type="Texture2D" uid="uid://44hymgx6hrns" path="res://assets/gui/character_select_menu/dual_select.png" id="4_hy81w"]
[ext_resource type="Texture2D" uid="uid://d3uromcspbgrn" path="res://assets/characters/p2_select.png" id="5_my1bj"]
[ext_resource type="Texture2D" uid="uid://dhrem8fmmyfu" path="res://assets/gui/character_select_menu/p1_locked.png" id="7_uamdr"]
[ext_resource type="Texture2D" uid="uid://clhfok8gyihpp" path="res://assets/gui/character_select_menu/p2_locked.png" id="8_0svb2"]
[ext_resource type="Texture2D" uid="uid://bnuah5cdn6uh5" path="res://assets/gui/character_select_menu/dual_p1_locked.png" id="9_m6r1x"]
[ext_resource type="Texture2D" uid="uid://xv157rk3jv42" path="res://assets/gui/character_select_menu/dual_p2_locked.png" id="10_ollqc"]
[ext_resource type="Texture2D" uid="uid://dxucys014fut5" path="res://assets/gui/character_select_menu/dual_locked.png" id="11_wqrtq"]
[ext_resource type="AudioStream" uid="uid://bkmufs5o8s4a7" path="res://assets/voicelines/retro-select-236670.mp3" id="12_jvb4q"]
[ext_resource type="AudioStream" uid="uid://cnh4y4rf7xxrn" path="res://assets/voicelines/Super Smash Bros. Melee - Announcer_ Choose Your Character.mp3" id="13_7oue7"]
[ext_resource type="AudioStream" uid="uid://cfmiwrpehwh2v" path="res://assets/voicelines/Character Select Sound Effect-[AudioTrimmer.com].mp3" id="13_tn5eh"]

[node name="character_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xvs0u")

[node name="player_1_cursor" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(164, 32)
texture = ExtResource("4_h86y1")

[node name="player_2_cursor" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(100, 32)
texture = ExtResource("5_my1bj")

[node name="hon" type="Sprite2D" parent="."]
position = Vector2(100, 32)
texture = ExtResource("3_ow0ew")

[node name="zhin" type="Sprite2D" parent="."]
position = Vector2(164, 32)
texture = ExtResource("1_tpsvn")

[node name="dual_select" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_hy81w")

[node name="locked_1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("7_uamdr")

[node name="locked_2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("8_0svb2")

[node name="locked_1_unlocked_2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("9_m6r1x")

[node name="locked_2_unlocked_1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("10_ollqc")

[node name="dual_locked" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("11_wqrtq")

[node name="scroll_1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_jvb4q")

[node name="scroll_2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_jvb4q")

[node name="lockies_1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_tn5eh")

[node name="lockies_2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_tn5eh")

[node name="choose_character" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_7oue7")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(135, 34)
zoom = Vector2(5, 5)
